modify some setting

--- a/_config.yml
+++ b/_config.yml
@@ -123,12 +123,10 @@ favicons: # Favicons are also used in the manifest file. Syntax is 'size: path'
 navigation_header:
 - title: Home
   url: /
-- title: Study
-  url: /study/
+- title: Blog
+  url: /blog/
 #- title: Elements
 #  url: /elements/
-#- title: Blog
-#  url: /blog/
 #- title: Categories
 #  url: /categories/
 - title: Search
